--- a/src/components/LatestMatch/index.css
+++ b/src/components/LatestMatch/index.css
@@ -121,7 +121,7 @@
     font-size: 14px;
   }
 }
-.latest-match-team-name{
+.latest-match-team-name {
   color: #ffffff;
-  font-family: "Bree Serif";
+  font-family: 'Bree Serif';
 }
